@@ -18,6 +18,7 @@ perl                       = 5.008
 JSON::XS                   = 0
 POE::Component::IRC::State = 6.35
 Proc::Daemon               = 0.02
+Term::ANSIColor            = 0
 YAML::XS                   = 0
 
 [Prereq / Test]
